# pypi

./: .gitignore  README.md  pyproject.toml
src/example_package_0gregory0.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
